force-app/main/default/objects/Mediator_Property__c/Mediator_Property__c.object-meta.xml
<CustomObject>
    <description>Junction between a mediator (Contact) and a Property. One mediator markets many projects and one project is marketed by many mediators, so the pairing cannot live as a lookup on either side. The chatbot uses it to answer "who do I talk to for this project?" and to route an after-hours enquiry to the right mediator.</description>
    <label>Mediator-Property</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Mediator-Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mediator-Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>