force-app/main/default/objects/Mediator_Property__c/fields/Mediator__c.field-meta.xml
<CustomField>
    <fullName>Mediator__c</fullName>
    <description>The mediator/broker, stored as a Contact. Primary master, so the junction record inherits the mediator's owner and sharing.</description>
    <label>Mediator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Mediator_Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>