force-app/main/default/objects/Mediator_Property__c/fields/Mediator_Name__c.field-meta.xml
<CustomField>
    <fullName>Mediator_Name__c</fullName>
    <description>Mirror of the mediator name. Master-detail fields cannot be used as related-list columns, so the Property page shows this instead of a bare auto-number.</description>
    <formula>TRIM(BLANKVALUE(Mediator__r.FirstName, &quot;&quot;) &amp; &quot; &quot; &amp; Mediator__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Mediator Name</label>
    <type>Text</type>
</CustomField>