force-app/main/default/objects/Mediator_Property__c/fields/Mediator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mediator_Phone__c</fullName>
    <description>Best contact number for the mediator, mobile first. Lets the Property related list be actioned without opening the Contact.</description>
    <formula>BLANKVALUE(Mediator__r.MobilePhone, Mediator__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Mediator Phone</label>
    <type>Text</type>
</CustomField>