force-app/main/default/objects/Mediator_Property__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>The project this mediator handles. Secondary master, so the pairing disappears with the property and can be reported on from either side.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Mediators</relationshipLabel>
    <relationshipName>Mediator_Properties</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>