force-app/main/default/objects/Mediator_Property__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <description>City of the project, for the mediator-side related list and reporting.</description>
    <formula>Property__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Property City</label>
    <type>Text</type>
</CustomField>