force-app/main/default/objects/Mediator_Property__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Mirror of the project name, so the Contact page can list what a mediator handles.</description>
    <formula>Property__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>