force-app/main/default/objects/Mediator_Property__c/fields/Property_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Property_Price_Range__c</fullName>
    <description>Formatted price band of the project, carried over for the mediator-side related list.</description>
    <formula>Property__r.Price_Range__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Property Price Range</label>
    <type>Text</type>
</CustomField>